Added ANN to predict mri tumor dataset

--- a/Brain_MRI_for_Tumor_Detection.ipynb
+++ b/Brain_MRI_for_Tumor_Detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "728af3e8-0f21-4fec-a8ec-96f7ef8c4b08",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,9 @@
     "import math\n",
     "import openpyxl\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Flatten"
    ]
   },
   {
@@ -2805,7 +2807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "8f0d460a-8a65-4b30-a1b0-c284924c18f9",
    "metadata": {},
    "outputs": [
@@ -2916,7 +2918,7 @@
        "4    255       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2929,7 +2931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "9db47d0d-17c6-4536-961e-69e93111fe95",
    "metadata": {},
    "outputs": [
@@ -3034,7 +3036,7 @@
        "4    255  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3048,7 +3050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "4d979553-4906-4296-879f-da31d21049ae",
    "metadata": {},
    "outputs": [],
@@ -3059,7 +3061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "1aa9ef4c-19f7-4bd4-a5ac-a39a3278da4a",
    "metadata": {},
    "outputs": [],
@@ -3072,8 +3074,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "6f80240d-3cec-4e7e-a130-f685d9a9c40a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "41/41 [==============================] - 2s 3ms/step - loss: 0.6209 - accuracy: 0.6931\n",
+      "Epoch 2/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.5630 - accuracy: 0.7376\n",
+      "Epoch 3/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.5315 - accuracy: 0.7921\n",
+      "Epoch 4/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4903 - accuracy: 0.7970\n",
+      "Epoch 5/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4817 - accuracy: 0.7970\n",
+      "Epoch 6/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4700 - accuracy: 0.7970\n",
+      "Epoch 7/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4561 - accuracy: 0.8168\n",
+      "Epoch 8/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4597 - accuracy: 0.8168\n",
+      "Epoch 9/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4445 - accuracy: 0.8168\n",
+      "Epoch 10/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4470 - accuracy: 0.8020\n",
+      "Epoch 11/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4625 - accuracy: 0.7921\n",
+      "Epoch 12/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.4387 - accuracy: 0.8218\n",
+      "Epoch 13/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.4132 - accuracy: 0.8119\n",
+      "Epoch 14/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4184 - accuracy: 0.8317\n",
+      "Epoch 15/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4048 - accuracy: 0.8119\n",
+      "Epoch 16/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3925 - accuracy: 0.8317\n",
+      "Epoch 17/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4537 - accuracy: 0.7970\n",
+      "Epoch 18/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3912 - accuracy: 0.8119\n",
+      "Epoch 19/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.4230 - accuracy: 0.8119\n",
+      "Epoch 20/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.4081 - accuracy: 0.8069\n",
+      "Epoch 21/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.4011 - accuracy: 0.8168\n",
+      "Epoch 22/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.4048 - accuracy: 0.8218\n",
+      "Epoch 23/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.4020 - accuracy: 0.8267\n",
+      "Epoch 24/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3812 - accuracy: 0.8317\n",
+      "Epoch 25/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.4084 - accuracy: 0.8119\n",
+      "Epoch 26/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3844 - accuracy: 0.8218\n",
+      "Epoch 27/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3821 - accuracy: 0.8069\n",
+      "Epoch 28/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3819 - accuracy: 0.8119\n",
+      "Epoch 29/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3993 - accuracy: 0.8218\n",
+      "Epoch 30/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3764 - accuracy: 0.8366\n",
+      "Epoch 31/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3823 - accuracy: 0.8267\n",
+      "Epoch 32/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3512 - accuracy: 0.8515\n",
+      "Epoch 33/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3881 - accuracy: 0.8218\n",
+      "Epoch 34/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3659 - accuracy: 0.8317\n",
+      "Epoch 35/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3531 - accuracy: 0.8416\n",
+      "Epoch 36/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3478 - accuracy: 0.8416\n",
+      "Epoch 37/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3543 - accuracy: 0.8416\n",
+      "Epoch 38/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3626 - accuracy: 0.8267\n",
+      "Epoch 39/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3478 - accuracy: 0.8317\n",
+      "Epoch 40/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3522 - accuracy: 0.8317\n",
+      "Epoch 41/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3582 - accuracy: 0.8416\n",
+      "Epoch 42/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3412 - accuracy: 0.8465\n",
+      "Epoch 43/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3397 - accuracy: 0.8416\n",
+      "Epoch 44/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3501 - accuracy: 0.8564\n",
+      "Epoch 45/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3232 - accuracy: 0.8465\n",
+      "Epoch 46/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3590 - accuracy: 0.8069\n",
+      "Epoch 47/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3589 - accuracy: 0.8218\n",
+      "Epoch 48/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3443 - accuracy: 0.8564\n",
+      "Epoch 49/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3382 - accuracy: 0.8218\n",
+      "Epoch 50/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3409 - accuracy: 0.8465\n",
+      "Epoch 51/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3284 - accuracy: 0.8465\n",
+      "Epoch 52/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3287 - accuracy: 0.8465\n",
+      "Epoch 53/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3415 - accuracy: 0.8564\n",
+      "Epoch 54/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3243 - accuracy: 0.8416\n",
+      "Epoch 55/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3296 - accuracy: 0.8465\n",
+      "Epoch 56/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3363 - accuracy: 0.8465\n",
+      "Epoch 57/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3252 - accuracy: 0.8564\n",
+      "Epoch 58/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3358 - accuracy: 0.8218\n",
+      "Epoch 59/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3278 - accuracy: 0.8515\n",
+      "Epoch 60/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3163 - accuracy: 0.8366\n",
+      "Epoch 61/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3109 - accuracy: 0.8515\n",
+      "Epoch 62/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3046 - accuracy: 0.8713\n",
+      "Epoch 63/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3186 - accuracy: 0.8465\n",
+      "Epoch 64/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3067 - accuracy: 0.8515\n",
+      "Epoch 65/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.2950 - accuracy: 0.8564\n",
+      "Epoch 66/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3055 - accuracy: 0.8515\n",
+      "Epoch 67/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3751 - accuracy: 0.8465\n",
+      "Epoch 68/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3445 - accuracy: 0.8366\n",
+      "Epoch 69/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2974 - accuracy: 0.8713\n",
+      "Epoch 70/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2962 - accuracy: 0.8663\n",
+      "Epoch 71/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2843 - accuracy: 0.8564\n",
+      "Epoch 72/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2977 - accuracy: 0.8564\n",
+      "Epoch 73/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2960 - accuracy: 0.8663\n",
+      "Epoch 74/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2927 - accuracy: 0.8614\n",
+      "Epoch 75/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3214 - accuracy: 0.8614\n",
+      "Epoch 76/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.2886 - accuracy: 0.8663\n",
+      "Epoch 77/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.3137 - accuracy: 0.8317\n",
+      "Epoch 78/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3012 - accuracy: 0.8564\n",
+      "Epoch 79/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.2779 - accuracy: 0.8812\n",
+      "Epoch 80/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2817 - accuracy: 0.8762\n",
+      "Epoch 81/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2656 - accuracy: 0.8812\n",
+      "Epoch 82/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.2875 - accuracy: 0.8663\n",
+      "Epoch 83/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2748 - accuracy: 0.8713\n",
+      "Epoch 84/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2626 - accuracy: 0.8812\n",
+      "Epoch 85/100\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.2841 - accuracy: 0.8713\n",
+      "Epoch 86/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.3002 - accuracy: 0.8614\n",
+      "Epoch 87/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2642 - accuracy: 0.8614\n",
+      "Epoch 88/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2799 - accuracy: 0.8911\n",
+      "Epoch 89/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2689 - accuracy: 0.8762\n",
+      "Epoch 90/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2776 - accuracy: 0.8713\n",
+      "Epoch 91/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2866 - accuracy: 0.8762\n",
+      "Epoch 92/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2735 - accuracy: 0.8911\n",
+      "Epoch 93/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2782 - accuracy: 0.8564\n",
+      "Epoch 94/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2560 - accuracy: 0.8713\n",
+      "Epoch 95/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2647 - accuracy: 0.8762\n",
+      "Epoch 96/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2798 - accuracy: 0.8861\n",
+      "Epoch 97/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2557 - accuracy: 0.8762\n",
+      "Epoch 98/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2456 - accuracy: 0.9059\n",
+      "Epoch 99/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2594 - accuracy: 0.8515\n",
+      "Epoch 100/100\n",
+      "41/41 [==============================] - 0s 3ms/step - loss: 0.2317 - accuracy: 0.8861\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x1c0ad4d73d0>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# apply ann\n",
+    "model = Sequential()\n",
+    "\n",
+    "# input layer\n",
+    "model.add(Dense(128, activation = None, input_dim = x_train.shape[1]))\n",
+    "\n",
+    "# first hidden layer\n",
+    "model.add(Dense(128, activation = 'relu', use_bias = True))\n",
+    "\n",
+    "# second hidden layer\n",
+    "model.add(Dense(128, activation = 'relu', use_bias = True))\n",
+    "\n",
+    "# flatten the output\n",
+    "model.add(Flatten())\n",
+    "\n",
+    "# output layer\n",
+    "model.add(Dense(1, activation = 'sigmoid'))\n",
+    "\n",
+    "# compile the model\n",
+    "model.compile(optimizer = 'adam', loss = 'binary_crossentropy', metrics = ['accuracy'])\n",
+    "\n",
+    "model.fit(x_train, y_train, epochs = 100, batch_size = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "47bd4aa5-313b-435a-8d3b-18c463e4db0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/2 [==============================] - 0s 16ms/step - loss: 0.7814 - accuracy: 0.7647\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.7814427614212036, 0.7647058963775635]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# evaluate model\n",
+    "model.evaluate(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98bee1a2-d65e-4f44-971b-35dab30ca9fd",
    "metadata": {},
    "outputs": [],
    "source": []
